RecordConverter support convert record key #207